# py-earnings-calls-m

./: .dockerignore  .env.example  .export-ignore  .gitignore  AGENTS.md  CODEX_PRIMARY_PROMPT.md  CODEX_TASKLIST.md  DATA_SOURCES.md  Dockerfile  FUTURE_DISTRIBUTED_STORAGE_PRINCIPLES.md  Makefile  PROJECT_STRUCTURE.txt  README.md  REFDATA_SCHEMA.md  STORAGE_LAYOUT.md  TARGET_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
docs/: CODEX_PRIMARY_PROMPT.md  CODEX_TASKLIST.md  DATA_SOURCES.md  FUTURE_DISTRIBUTED_STORAGE_PRINCIPLES.md  Makefile  REFDATA_SCHEMA.md  STORAGE_LAYOUT.md  TARGET_ARCHITECTURE.md  WAVE1_MIGRATION_NOTE.md  WAVE2_MIGRATION_NOTE.md  WAVE3_MIGRATION_NOTE.md  WAVE4_MIGRATION_NOTE.md  WAVE5_MIGRATION_NOTE.md  WAVE7_1_MIGRATION_NOTE.md  WAVE7_2_COMPANION_MIGRATION_NOTE.md  WAVE7_MIGRATION_NOTE.md  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
m_cache_shared/: __init__.py
py_earnings_calls/: __init__.py  __main__.py  augmentation.py  augmentation_shared.py  cli.py  config.py  http.py  identifiers.py  lookup.py  m_cache_cli.py  models.py  monitoring.py  provider_registry.py  rate_limit.py  reconciliation.py  resolution.py  resolution_events.py  resolution_service.py  runtime_activity.py  runtime_output.py  service_runtime.py
refdata/: README.md
requirements/: dev.txt  m_cache_shared_external.txt
scripts/: README.md  bootstrap.sh
tests/: conftest.py  test_api_app.py  test_augmentation_shared_facade.py  test_cli_output_modes.py  test_config.py  test_container_wrapper.py  test_forecast_adapters.py  (+22 more)
(+66 files in other folders)
